Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberBoolean.quorum
class Main
    action Main
        number v = Test()
    end

    action Test() returns number
        boolean var = true
        return var
    end
end